--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.22",
     "react": "^17.0.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
-    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.2",
     "styled-components": "^5.3.3",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.3.4"
   }
 }
